--- a/NLP_PROJECT/turn_to_csv.ipynb
+++ b/NLP_PROJECT/turn_to_csv.ipynb
@@ -705,9 +705,14 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.1"
+   "version": "3.11.3 (tags/v3.11.3:f3909b8, Apr  4 2023, 23:49:59) [MSC v.1934 64 bit (AMD64)]"
   },
-  "orig_nbformat": 4
+  "orig_nbformat": 4,
+  "vscode": {
+   "interpreter": {
+    "hash": "ff4b1fca65a764b45acb559e482afe389d289dd599b9f8c5fd12ff5c2ea46a65"
+   }
+  }
  },
  "nbformat": 4,
  "nbformat_minor": 2
